# SimpCalc

./: CMakeLists.txt  compile_commands.json
project/includes/: definitions.h
project/src/: Token.c  Token.h  Tokenizer.c  Tokenizer.h  main.c
